# Unicron

DesktopClient/: DesktopClient.sln
DesktopClient/DesktopClient/: App.axaml  App.axaml.cs  DesktopClient.csproj  Program.cs  ViewLocator.cs
DesktopClient/DesktopClient/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
DesktopClient/DesktopClient/Views/: MainWindow.axaml  MainWindow.axaml.cs
Server/: .env  Cargo.toml  build.rs  docker-compose.yml  unicron.sql
Server/src/: db.rs  main.rs
Server/src/proto/: common.proto  courses.proto  finance.proto  institutions.proto  marketplace.proto  progress.proto  users.proto
WebClient/: index.html  package.json  tsconfig.app.json  vite.config.ts
WebClient/src/: App.tsx  index.css  main.tsx
WebClient/src/components/button/: button.tsx
WebClient/src/components/dropdown/: dropdown.tsx
WebClient/src/components/fields/: fields.tsx
WebClient/src/components/notification/: notification.tsx  notification_container.tsx
WebClient/src/components/pagination/: pagination.tsx
WebClient/src/components/popup/: popup.tsx
WebClient/src/entities/: enums.ts  user.ts
WebClient/src/entities/data/: auth.ts  basket.ts  certificates.ts  course.ts  post.ts  role.ts  user.ts  (+1 more)
WebClient/src/mock/: data.ts
WebClient/src/pages/: MainPage.tsx  ProfilePage.tsx  ServicePage.tsx  SupportPage.tsx
WebClient/src/routes/: app_route.tsx  index.ts  private_route.tsx
WebClient/src/shared/: image_main.tsx
WebClient/src/store/: auth.ts  notification.ts  sidebar.ts
WebClient/src/structures/: institutions.ts  logs.ts  services.ts
(+15 files in other folders)
