[package]
name = "Server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
deadpool-redis = "0.22.0"
dotenvy = "0.15.7"
hyper = "1.8.1"
prost = "0.14.1"
prost-types = "0.14.1"
rdkafka = { version = "0.38.0", features = ["tokio"] }
redis = "0.32.7"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[build-dependencies]
tonic-prost-build = "0.14.2"
